--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,4 +19,8 @@ phases:
         commands:
             - echo "we are in the post build phase"
             
+artifacts:
+        files:
+                - '**/*'
+        name: demo-artifacts
 
