--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,5 +18,8 @@ phases:
     post_build:
         commands:
             - echo "we are in the post build phase"
-            
+artifacts:
+    file:
+     - '**/*'
+    name: demo-artifacts            
 
