--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
         commands:
             - echo "we are in the post build phase"
 artifacts:
-    file:
+    files:
      - '**/*'
     name: demo-artifacts            
 
