--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
         runtime-versions:
             nodejs: 10
         commands:
-            - printenv
-            - echo "installing something"
+           - echo "installing something"
     pre_build:
         commands: 
             - echo "we are in the pre build phase"
@@ -14,6 +13,7 @@ phases:
         commands:
             - echo "we are in the build block"
             - echo "we will run some tests"
+            - sed -i "s/using/'yname'/g" /var/www/html/index.html
             - grep -Fq "Congratulations" index.html
     post_build:
         commands:
