--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,7 @@
 version: 0.2
-
+env:
+  parameter-store:
+    NAME: "/MY/demo"
 phases: 
     install:
         runtime-versions:
@@ -12,6 +14,7 @@ phases:
     build:
         commands:
             - echo "we are in the build block"
+            - sed -i 's|$yname|'$NAME'|' index.html
             - echo "we will run some tests"
             - grep -Fq "Congratulations" index.html
     post_build:
