--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     build:
         commands:
             - echo "we are in the build block"
-            - sed -i 's|$yname|'$NAME'|' index.html
+            - sed -i 's|V1|'$NAME'|' index.html
             - echo "we will run some tests"
             - grep -Fq "Congratulations" index.html
     post_build:
